--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.9.0",
+    "axios": "^1.10.0",
     "react": "^19.1.0",
+    "react-currency-input-field": "^3.10.0",
     "react-dom": "^19.1.0",
+    "react-easy-crop": "^5.4.2",
     "react-icons": "^5.5.0",
     "react-modal": "^3.16.3",
+    "react-number-format": "^5.4.4",
+    "react-select": "^5.10.1",
     "recharts": "^2.15.3"
   },
   "devDependencies": {
