--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-modal": "^3.16.3",
     "react-number-format": "^5.4.4",
     "react-select": "^5.10.1",
-    "recharts": "^2.15.3"
+    "recharts": "^2.15.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
