--- a/package.json
+++ b/package.json
@@ -12,16 +12,20 @@
   "dependencies": {
     "@hello-pangea/dnd": "^18.0.1",
     "axios": "^1.10.0",
+    "browser-image-compression": "^2.0.2",
     "file-saver": "^2.0.5",
+    "focus-trap-react": "^11.0.4",
     "jsonwebtoken": "^9.0.2",
-    "react": "^19.1.0",
+    "react": "^18.2.0",
     "react-currency-input-field": "^3.10.0",
-    "react-dom": "^19.1.0",
-    "react-easy-crop": "^5.4.2",
+    "react-dom": "^18.2.0",
+    "react-easy-crop": "^5.5.0",
     "react-icons": "^5.5.0",
     "react-modal": "^3.16.3",
     "react-number-format": "^5.4.4",
-    "react-select": "^5.10.1",
+    "react-router-dom": "^7.7.0",
+    "react-select": "^5.10.2",
+    "react-to-print": "^2.14.13",
     "recharts": "^2.15.3",
     "xlsx": "^0.18.5"
   },
