--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@hello-pangea/dnd": "^18.0.1",
+    "@react-pdf/renderer": "^4.3.0",
     "axios": "^1.10.0",
     "browser-image-compression": "^2.0.2",
     "file-saver": "^2.0.5",
     "focus-trap-react": "^11.0.4",
+    "html2pdf.js": "^0.10.3",
     "jsonwebtoken": "^9.0.2",
+    "pagedjs": "^0.4.3",
     "react": "^18.2.0",
     "react-currency-input-field": "^3.10.0",
     "react-dom": "^18.2.0",
