--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "focus-trap-react": "^11.0.4",
     "html2pdf.js": "^0.10.3",
     "jsonwebtoken": "^9.0.2",
+    "mercadopago": "^2.8.0",
     "pagedjs": "^0.4.3",
     "react": "^18.2.0",
     "react-currency-input-field": "^3.10.0",
